[composer] Add AGPL-3.0 license
GNU Affero General Public License version 3

HTML: http://opensource.org/licenses/AGPL-3.0
Plain text: https://www.gnu.org/licenses/agpl.txt

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "openparliamentbe/core",
     "description": "The core of the OpenParliament.be project.",
+    "license": "AGPL-3.0",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
