[composer] Add support data

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
     "description": "The core of the OpenParliament.be project.",
     "license": "AGPL-3.0",
     "type": "project",
+    "support": {
+        "source": "https://github.com/openparliamentbe/core",
+        "issues": "https://github.com/openparliamentbe/core/issues"
+    },
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.1.*",
