--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "source": "https://github.com/openparliamentbe/core",
         "issues": "https://github.com/openparliamentbe/core/issues"
     },
+    "authors": [
+        {
+            "name": "Michaël Lecerf",
+            "email": "michael@estsurinter.net"
+        }
+    ],
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.1.*",
