Explain and categorize environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,46 @@
+# Application configuration
+# -------------------------
+
+# The environment type that has to be used on this machine.
 APP_ENV="local"
+
+# Boolean to enable or disable the debug mode.
 APP_DEBUG=true
+
+# This key is used by the framework’s encryption service
+# and should be set to a random, 32 character string,
+# otherwise these encrypted strings won’t be safe.
 APP_KEY="SomeRandomKey!!!"
 
+# Determines the default locale used by the application’s translator.
 APP_LOCALE="en"
+
+# The fallback locale to use when the requested one is not available.
 APP_FALLBACK_LOCALE="en"
 
+
+# Database settings and credentials
+# ---------------------------------
+
+# The name of the configured connection to
+# use by default for all database work.
 DB_CONNECTION="mysql"
+
+# The machine hosting the database.
 DB_HOST="localhost"
+
+# Port to use to connect to the database.
 DB_PORT=3306
+
+# Name of the database itself.
 DB_DATABASE="homestead"
+
+# User name and password to access the database.
 DB_USERNAME="homestead"
 DB_PASSWORD="secret"
 
+
+# Drivers to use for caching, session management and queuing.
 CACHE_DRIVER="memcached"
 SESSION_DRIVER="memcached"
 QUEUE_DRIVER="database"
